--- a/EECS493/Project1/index.html
+++ b/EECS493/Project1/index.html
@@ -3,7 +3,28 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
+        <style>
+        body {
+            font-family: 'Tangerine', serif;
+            font-size: 48px;
+        }
+        </style>
     </head>
     <body>
+        <header >
+            <ul class = "site-header">
+                <li class = "left">
+                    <img src = "./images/2019/award/TonyAwardSpin.gif" height="200" width="120">
+                </li>
+                <li class = "middle"> 
+                    <p>Tony Awards</p>
+                </li>
+                <li class = "right">
+                    <img src = "./images/2019/award/TonyAwardSpin.gif" height="200" width="120">
+                </li>
+            </ul>
+        </header>
     </body>
 </html>
