Let player moved by wasd

--- a/EECS493/Project2/index.html
+++ b/EECS493/Project2/index.html
@@ -26,6 +26,10 @@
           <div class="asteroidSection">
               <div class="curAstroid"> </div>
           </div>
+          <div id = "player">
+            <img src="./src/player/player.gif">
+          </div>
+          
           <div id="game_right_section">
               <div id="scoreword">
                   SCORE
