Update player movement gif

--- a/EECS493/Project2/index.html
+++ b/EECS493/Project2/index.html
@@ -27,7 +27,7 @@
               <div class="curAstroid"> </div>
           </div>
           <div id = "player">
-            <img src="./src/player/player.gif">
+            <img id = "player_img" src="./src/player/player.gif">
           </div>
           
           <div id="game_right_section">
