Finish game main menu

--- a/EECS493/Project2/index.html
+++ b/EECS493/Project2/index.html
@@ -16,7 +16,20 @@
       <div class='game-window'>
         
         <!-- Main Menu -->
-        
+        <div id="main-menu">
+          <div class = "menu-header">
+            Covid Comets
+          </div>
+          <div class = "menu-content">
+            <button class = "menu-content-button">
+              Play game!
+            </button>
+            <button class = "menu-content-button">
+              Settings
+            </button>
+          </div>
+        </div>
+
         <!-- Settings -->
 
         <!-- Tutorial -->
