--- a/EECS493/Project3/index.html
+++ b/EECS493/Project3/index.html
@@ -78,13 +78,15 @@
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
             <span class="caret"></span></button>
             <ul class="dropdown-menu">
-              <li><a href="#">Reset to original</a></li>
-              <li><a href="#">Collection Name</a></li>
-              <li><a href="#">Price</a></li>
+              <li><a @click="sortButtonHandler(0)" class="active">Reset to original</a></li>
+              <li><a @click="sortButtonHandler(1)" href="#">Collection Name</a></li>
+              <li><a @click="sortButtonHandler(2)" href="#">Price</a></li>
             </ul>
           </div>
+      
+      
 
-       <div v-for= "(item, index) in resultList" v-if= "index % 2 ==0 && resultList.length > 1">
+       <div v-for= "(item, index) in resultList" v-if= "index % 2 ==0">
          <div class = "col-lg-6 col-md-6 col-sm-6" style='margin-bottom: 50px; display: inline; height: 250px' >
            <div class="col-sm-4" style='max-width:200px;margin-right: 30px'>
              <img style='width: 120%; display: inline; ' :src="resultList[index].artworkUrl100">
@@ -104,12 +106,12 @@
 
                    <div class="tab-content-box">
                      <h4 class="inline-block">Collection Name: </h4> 
-                     <span>{{resultList[index].trackName}}</span>
+                     <span>{{resultList[index].collectionName}}</span>
                    </div>
 
                    <div class="tab-content-box">
                      <h4 class="inline-block">Price: </h4> 
-                     <span>{{resultList[index].trackPrice}}</span>
+                     <span>{{resultList[index].collectionPrice}}</span>
                    </div>
 
                    <div class="tab-content-box">
@@ -120,7 +122,10 @@
                    <div class="tab-content-box">
                      <h4 class="inline-block">Preview: </h4> 
                      <a href="{{resultList[index].trackViewUrl}}"> Link</a>
-                   </div>  
+                   </div>
+                   <div class="tab-content-box">
+                      <button @click = "playButtonHandler()">{{playbutton}}</button>
+                   </div>
                 </div>
 
                 <div :id="'Track' + index" class="tab-pane fade">
@@ -173,6 +178,9 @@
                    <div class="tab-content-box">
                      <h4 class="inline-block">Preview: </h4> 
                      <a href="{{resultList[index+1].trackViewUrl}}"> Link</a>
+                   </div>
+                   <div class="tab-content-box">
+                     <button>{{playbutton}}</button>
                    </div>  
                 </div>
 
